--- a/app/assets/stylesheets/pages/_game_show.scss
+++ b/app/assets/stylesheets/pages/_game_show.scss
@@ -196,6 +196,9 @@
     text-decoration-color: #2D936C;
     font-size: 18px;
   }
+  .round-title {
+    font-size: 20px !important;
+  }
   .page-section p {
     font-size: 12px;
   }
