--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -15,3 +15,16 @@
     border: 1px solid gray;
   }
 }
+
+@media only screen and (max-width:500px) {
+  .user-page {
+    flex-direction: column-reverse;
+    .play-box {
+      width: 100%;
+    }
+    .right-side-user-info {
+      width: 100%;
+      margin-bottom: 20px;
+    }
+  }
+}
